@@ -50,6 +50,7 @@ subcommand; @xref{help command}.
 * Common options:: Options that apply to all commands.
 * Subcommands:: Description of the available commands and their options.
 * Environment variables:: User-tunable varibles.
+* Build roots:: Dealing with build directories.
 @end menu
 
 @node Common options
@@ -335,6 +336,12 @@ default) or to arbitraty files.  See the @option{--stdout} and
 The following subcommand options are recognized:
 
 @table @option
+@item --build-root=path
+@cindex @option{--build-root}, @command{debug}
+Specifies the build root in which to find the test programs referenced
+by the Kyuafile, if different from the Kyuafile's directory.  See
+@ref{Build roots} for more information.
+
 @item --kyuafile=path
 @cindex @option{--kyuafile}, @command{debug}
 Specifies the Kyuafile to process.  Defaults to a @file{Kyuafile} file
@@ -400,6 +407,12 @@ the @option{--kyuafile} flag.
 The following subcommand options are recognized:
 
 @table @option
+@item --build-root=path
+@cindex @option{--build-root}, @command{list}
+Specifies the build root in which to find the test programs referenced
+by the Kyuafile, if different from the Kyuafile's directory.  See
+@ref{Build roots} for more information.
+
 @item --kyuafile=path
 @cindex @option{--kyuafile}, @command{list}
 Specifies the Kyuafile to process.  Defaults to a @file{Kyuafile} file
@@ -436,6 +449,12 @@ the @option{--kyuafile} flag.
 The following subcommand options are recognized:
 
 @table @option
+@item --build-root=path
+@cindex @option{--build-root}, @command{test}
+Specifies the build root in which to find the test programs referenced
+by the Kyuafile, if different from the Kyuafile's directory.  See
+@ref{Build roots} for more information.
+
 @item --kyuafile=path
 @cindex @option{--kyuafile}, @command{test}
 Specifies the Kyuafile to process.  Defaults to a @file{Kyuafile} file
@@ -532,3 +551,75 @@ directory containing the SQL database schema.
 Defaults to @file{@value{KYUA_STOREDIR}}.
 
 @end table
+
+@node Build roots
+@section Build roots
+
+@cindex Build directories
+@emph{Build directories} (or object directories, target directories,
+product directories, etc.) is the concept that allows a developer to
+keep the source tree clean from build products by asking the build
+system to place such build products under a separate subtree.
+
+Most build systems today support build directories.  For example, the
+GNU Automake/Autoconf build system exposes such concept when invoked
+as follows:
+
+@example
+$ cd my-project-1.0
+$ mkdir build
+$ cd build
+$ ../configure
+$ make
+@end example
+
+Under such invocation, all the results of the build are left in the
+@file{my-project-1.0/build/} subdirectory while maintaining the
+contents of @file{my-project-1.0/} intact.
+
+Because build directories are an integral part of most build systems,
+and because they are a tool that developers use frequently, Kyua
+supports build directories too.  This manifests in the form of Kyua
+being able to run tests from build directories while reading the
+(often immutable) test suite definition from the source tree.
+
+One important property of build directories is that they follow (or
+need to follow) the exact same layout as the source tree.  For
+example, consider the following directory listings:
+
+@example
+src/Kyuafile
+src/bin/ls/
+src/bin/ls/Kyuafile
+src/bin/ls/ls.c
+src/bin/ls/ls_test.c
+src/sbin/su/
+src/sbin/su/Kyuafile
+src/sbin/su/su.c
+src/sbin/su/su_test.c
+
+obj/bin/ls/
+obj/bin/ls/ls*
+obj/bin/ls/ls_test*
+obj/sbin/su/
+obj/sbin/su/su*
+obj/sbin/su/su_test*
+@end example
+
+Note how the directory layout within @file{src/} matches that of
+@file{obj/}.  The @file{src/} directory contains only source files and
+the definition of the test suite (the Kyuafiles), while the
+@file{obj/} directory contains only the binaries generated during a
+build.
+
+@cindex @option{--build-root}, The concept of build directories
+All commands that deal with the workspace support the
+@option{--build-root} option.  When this option is provided, the
+directory specified by the option is considered to be the root of the
+build directory.  For example, considering our previous fake tree
+layout, we could invoke @command{kyua test} as any of the following:
+
+@example
+$ kyua test --kyuafile=src/Kyuafile --build-root=obj
+$ cd src && kyua test --build-root=../obj
+@end example
